Change arrow glyph to ensure visibility on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,7 +263,7 @@ main {
 }
 
 .card-footer li::before {
-    content: "⮚";
+    content: "✦";
     color: var(--primary-dark);
     margin-right: 0.5rem;
 }
